# bet-wise-dialer

./: .env  .env.example  .gitignore  ADD_RUST_TO_PATH.md  BACKEND_DOCUMENTATION.md  CLEANUP_WINDOWS.md  DATABASE_SETUP.md  DELETE_WHATSAPP_DATA.md  DELETE_WHATSAPP_NOW.md  DISM_COMMAND.md  FREE_MORE_SPACE.md  INSTALLATION.md  INSTALL_RUST.md  README.md  RUN_AS_ADMIN.md  cleanup.ps1  index.html  package-lock.json  package.json  tailwind.config.ts  test-leads.csv  vite.config.ts
documentation/: Admin-Workflow-Documentation.html  Agent-Workflow-Documentation.html  Manager-Workflow-Documentation.html  Onboarding-Guide.html
documentation/html/: October-Development-Milestones.html  README.md  backend-verification.html
scripts/: setup-local-supabase.sh  use-cloud-supabase.sh  use-custom-server.ps1  use-custom-server.sh  use-local-supabase.sh
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DashboardSelectionDialog.tsx  ProtectedRoute.tsx  RoleBasedDashboard.tsx  RoleBasedReports.tsx  RoleBasedSettings.tsx  UpdateDialog.tsx
src/contexts/: AuthContext.tsx
src/data/: aiScriptsMock.ts  sampleData.ts
src/hooks/: useAdminReports.tsx  useAgentAnalysis.tsx  useAgentStatus.tsx  useAuth.tsx  useAutoUpdate.ts  useCallMetrics.tsx  useCallbacks.tsx  useFunnelAnalysis.tsx  useLiveTranscription.tsx  useMonitorData.tsx  useNotifications.tsx  usePerformanceData.tsx  useQueueMetrics.tsx  useRealtimeAI.tsx  (+8 more)
supabase/: config.toml
(+123 files in other folders)
